<resources>
    <string name="app_name">Feeder</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <!-- Strings used for fragments for navigation -->
    <string name="wifi_fragment_label">Wifi Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="connecting_wifi">Wifi Connecting</string>
    <string name="wifi_is_disabled">Wifi Is Disabled! Enable It</string>
    <string name="enable_wifi">Enable Wifi</string>
    <string name="wifi_settings">Wifi Settings</string>
    <string name="retry">retry</string>
    <string name="connected">connected</string>
    <string name="network_is_not_available">Network is not available</string>
    <string name="hello_worldRed"><![CDATA[<b><font color=#FF0000>Hello world!</font></b>]]></string>
    <string name="wrong_connected">Not Connected to the device</string>
    <string name="open_wifi_setting">Open Wifi Setting</string>
    <string name="turn_on_motor">Turn On Motor</string>
    <string name="turn_off_motor">Turn Off Motor</string>
    <string name="timer">Timer</string>
    <string name="wifi">Wifi</string>
    <string name="few">Few</string>
    <string name="seconds">%d Seconds</string>
    <string name="feeding_sound">Feeding Sound</string>
    <string name="choose">Choose</string>
    <string name="led_state">Led state</string>
    <string name="led_timer">Led Timer</string>
    <string name="medium">Medium</string>
    <string name="much">Much</string>
    <string name="start_record">Start record</string>
    <string name="play_sound">Play Sound</string>
    <string name="add_clock">add_new_clock</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="clock_format">%d:%02d</string>
    <string name="dashboard">FEEDER</string>
    <string name="specification">Specification</string>
    <string name="scheduling">scheduling</string>
    <string name="periodic">Periodic</string>
    <string name="minute">%d Minute</string>
    <string name="wifi_ssid">Wifi Ssid</string>
    <string name="wifi_password">Wifi Password</string>
    <string name="static_ip">Static Ip</string>
    <string name="gateway">Gateway</string>
    <string name="subnet">Subnet</string>
    <string name="enter_wifi_password">Enter wifi password</string>
    <string name="confirm">Confirm</string>
    <string name="continue_">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="input_wrong">Enter a valid %s</string>
    <string name="record_sound">Record Sound</string>
    <string name="record_audio">Record Audio</string>
    <string name="record_audio_desc">Record audio permission is required</string>
    <string name="loading">Loading …</string>
    <string name="all_permissions_denied_feedback">all_permissions_denied_feedback</string>
    <string name="permission_rationale_settings_button_text">permission_rationale_settings_button_text</string>
    <string name="apply">Apply</string>
    <string name="time_to_start">Time To Start: %s</string>
    <string name="error_happened">An Error Happened</string>
    <string name="permission_denied_message">Permission %s is required</string>
    <string name="write_external_storage">Write External Storage</string>
    <string name="write_external_storage_desc">Write external storage is required</string>
    <string name="read_external_storage">Read External Storage</string>
    <string name="read_external_storage_desc">Read external storage is required</string>
    <string name="access_fine_location">Access Fine Location</string>
    <string name="access_fine_location_desc">Access fine location is required</string>
    <string name="any_denied_multiple_permissions">any_denied_multiple_permissions</string>
    <string name="access_coarse_location">Access Coarse Location</string>
    <string name="access_coarse_location_desc">Access coarse location is required</string>
    <string name="access_wifi_state">access_wifi_state</string>
    <string name="change_network_state">change_network_state</string>
    <string name="change_wifi_state">change_wifi_state</string>
    <string name="task_done">Task Done</string>
    <string name="actions">Actions</string>
    <string name="feeding_process">Feeding Process</string>
    <string name="feeding">Feeding</string>
    <string name="calling">Calling</string>
    <string name="lighting">Lighting</string>
    <string name="feeding_options">Feeding Options</string>
    <string name="connect_device_to_wifi">Connect Device To Wifi</string>
    <string name="sound_options">Sound Options</string>
    <string name="feeding_volume">Feeding Volume</string>
    <string name="sound_volume">Sound Volume</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="mute">Mute</string>
    <string name="turn_on_feeding">Turn on when feeding</string>
    <string name="always_on">Always turn on</string>
    <string name="always_off">Always turn off</string>
    <string name="connect_to">%s</string>
    <string name="calendar">Calendar</string>
    <string name="time_and_date_setting">Date And Time Settings</string>
    <string name="time_source">Time Source</string>
    <string name="manual_set_time">Manually Set Time</string>
    <string name="set_time_in_date">%s</string>
    <string name="confirm_date_set">Set This Time</string>
    <string name="lamp_options">Lighting Options</string>
    <string name="hour_format">%d Hours</string>
    <string name="minute_format">%d Minutes</string>
    <string name="second_format">%d Seconds</string>
    <string name="socket_close_error">Socket is Closed!</string>
    <string name="static_ip_config">Advance static IP configuration</string>
    <string name="submit">Submit</string>
</resources>