<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.viam.feeder.ui.record.RecordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/recording"
            goneUnless="@{vm.recordText!=null}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/start_record"
            android:onClick="@{()->vm.onStopClicked()}"
            android:text="@{vm.recordText??@string/start_record}"
            android:textColor="@color/white"
            app:backgroundTint="@color/red_500"
            app:icon="@drawable/ic_baseline_stop_24"
            app:iconTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="00:54" />

        <Button
            android:id="@+id/play"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            goneUnless="@{vm.recordText==null}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->vm.onPlayClicked()}"
            android:text="@string/play_sound"
            android:textColor="@color/green_500"
            app:icon="@drawable/ic_baseline_play_arrow_24"
            app:iconTint="@color/green_500"
            app:layout_constraintBottom_toBottomOf="@id/recording"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/record"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/recording" />


        <Button
            android:id="@+id/record"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            goneUnless="@{vm.recordText==null}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->vm.onRetryClicked()}"
            android:text="@string/retry"
            android:textColor="@color/red_500"
            app:icon="@drawable/ic_baseline_mic_24"
            app:iconTint="@color/red_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/play"
            app:layout_constraintTop_toTopOf="@id/play" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="@color/grey_300"
            app:layout_constraintTop_toBottomOf="@+id/recording" />


        <Button
            android:id="@+id/confirm"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:onClick="@{()->vm.onApplyClicked()}"
            android:text="@string/apply"
            android:textColor="@color/primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <Button
            android:id="@+id/cancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->vm.onCancelClicked()}"
            android:text="@string/cancel"
            android:textColor="@color/primary"
            app:layout_constraintEnd_toStartOf="@id/confirm"
            app:layout_constraintTop_toTopOf="@id/confirm" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>