<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.viam.feeder.ui.timer.TimerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        taskProgress="@{vm.compositeTask.asLiveData()}"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:tabMode="fixed">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_baseline_access_time_24"
                android:text="@string/scheduling" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_baseline_timelapse_24"
                android:text="@string/periodic" />

        </com.google.android.material.tabs.TabLayout>

        <com.airbnb.epoxy.EpoxyRecyclerView
            android:id="@+id/clock_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingBottom="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tab"
            tools:listitem="@layout/view_holder_clock_timer"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/add_clock"
            android:onClick="@{()->vm.onClickAddClock()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_baseline_add_24" />


        <androidx.constraintlayout.widget.Group
            android:id="@+id/scheduling_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="clock_list,floating_action_button"
            app:goneUnless="@{vm.timerMode==vm.TIMER_MODE_SCHEDULING}" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>