<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.viam.feeder.ui.wifi.WifiViewModel" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        app:cardBackgroundColor="@color/grey_100"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        tools:context=".ui.wifi.WifiFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/barrier"
                app:layout_constraintDimensionRatio="800:1100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/wifi_connecting" />


            <TextView
                android:id="@+id/enable_wifi_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/wrong_connected"
                android:visibility="gone"
                app:goneUnless="@{vm.networkStatus.connection == vm.networkStatus.CONNECTION_STATE_WRONG}"
                app:layout_constraintBottom_toTopOf="@id/enable_wifi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent="0.8" />

            <TextView
                android:id="@+id/wifi_connecting_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connecting_wifi"
                app:goneUnless="@{vm.networkStatus.connection == vm.networkStatus.CONNECTION_STATE_CONNECTING}"
                app:layout_constraintBottom_toTopOf="@id/enable_wifi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="top"
                app:constraint_referenced_ids="wifi_connecting_label,enable_wifi_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/enable_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:onClick="@{()->vm.onEnableWifi()}"
                android:text="@{vm.networkStatus.wifiEnabled?@string/connected:@string/open_wifi_setting}"
                app:backgroundTint="@{vm.networkStatus.wifiEnabled?@color/green_500:@color/primary}"
                app:icon="@{vm.networkStatus.wifiEnabled?@drawable/ic_baseline_check_circle_24:@drawable/ic_baseline_signal_wifi_4_bar_24}"
                app:iconSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:backgroundTint="@color/green_500"
                tools:icon="@drawable/ic_baseline_check_circle_24"
                tools:text="@string/connected" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>