<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.viam.feeder.ui.specification.SpecificationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.airbnb.epoxy.EpoxyRecyclerView
                    android:id="@+id/food_volume"
                    taskProgress="@{vm.feedVolumeEvent.asLiveData()}"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintTop_toTopOf="parent"
                    app:spanCount="3"
                    tools:listitem="@layout/view_holder_feed_volume" />

                <LinearLayout
                    android:id="@+id/volume"
                    taskProgress="@{vm.soundVolumeEventTask.asLiveData()}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/food_volume">

                    <ImageView
                        android:id="@+id/volume_mute"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:onClick="@{()->vm.onVolumeDownClicked()}"
                        android:padding="12dp"
                        app:srcCompat="@drawable/ic_baseline_volume_mute_24" />

                    <com.google.android.material.slider.Slider
                        android:id="@+id/soundVolume"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:stepSize="10.0"
                        android:value="@{vm.currentSoundVolumeValue}"
                        android:valueFrom="0.0"
                        android:valueTo="100.0"
                        tools:value="50.0" />

                    <ImageView
                        android:id="@+id/volume_up"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_margin="8dp"
                        android:onClick="@{()->vm.onVolumeUpClicked()}"
                        android:padding="12dp"
                        app:srcCompat="@drawable/ic_baseline_volume_up_24" />


                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/feeding_sound"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    taskProgress="@{vm.soundTask.asLiveData()}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/volume">

                    <AutoCompleteTextView
                        android:id="@+id/feeding_sound_drop_down"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/feeding_sound"
                        android:inputType="none"
                        android:text="@string/choose" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ledEnabled"
                    taskProgress="@{vm.ledStateTask.asLiveData()}"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/feeding_sound">

                    <AutoCompleteTextView
                        android:id="@+id/led_dropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:hint="@string/led_state"
                        android:inputType="none"
                        android:text="@string/choose" />
                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>